# ship-corner-game

./: .gitignore  CLAUDE.md  Cargo.toml  MULTIPLAYER.md  design.md  next.md
.cargo/: config.toml
.claude/: settings.local.json
data/: translations.csv
scripts/: release-web.ps1
src/: ally.rs  anchor_flail.rs  balance.rs  beam.rs  blade.rs  booster.rs  boss_intro.rs  boss_reward.rs  build_summary.rs  bullet.rs  cannon.rs  chest.rs  components.rs  crows_nest.rs  customize.rs  dockyard_view.rs  effects.rs  enemy.rs  flamethrower.rs  fonts.rs  game_over.rs  harpoon.rs  hitstop.rs  hull.rs  i18n.rs  identify.rs  low_hp_vignette.rs  main.rs  main_menu.rs  map.rs  menu_kit.rs  modes.rs  octopus.rs  onboarding.rs  palette.rs  pause.rs  pier.rs  proc_fx.rs  rendering.rs  rune.rs  (+16 more)
src/ally/: boarding.rs  heal.rs  mine.rs  missile.rs  mod.rs  oil.rs  plane.rs  viking.rs
src/customize/: drag.rs  equipped_mods.rs  orphan_runes.rs  render.rs  setup.rs  shop_lock.rs  shop_mods.rs  stats_panel.rs  synergy_panel.rs  tooltip.rs  update.rs
src/enemy/: artillery.rs  hp_bar.rs  mod.rs  rammer.rs  sniper.rs  traits.rs
src/map/: anim.rs  boss_patrol.rs  build.rs  buildings.rs  hud.rs  input.rs  procgen.rs  setup.rs
src/multiplayer/: bullets.rs  death.rs  enemies.rs  ghost.rs  loadout.rs  lobby.rs  mod.rs  net.rs  ready.rs  state_sync.rs  ui.rs  wave.rs  xp_sync.rs
src/turret/: decor.rs  heli.rs  mod.rs  mortar.rs  sharknet.rs
src/ui/: damage_panel.rs  difficulty_meter.rs  hud.rs  map_hint.rs  panel.rs  peek_back.rs  wave_indicator.rs
web/: index.html
