[package]
name = "ship-game"
version = "0.1.0"
edition = "2021"

[dependencies]
# 2D-only feature set. Bevy's defaults pull in the entire 3D stack
# (PBR rendering, glTF loader, scene serialization, 3D animation
# graphs, mesh picking, HDR / KTX2 / zstd compressed-texture formats)
# which this game doesn't touch — every visual is a `Mesh2d` / `Sprite`
# / `Text2d` on a 2D camera. Trimming them shrinks the binary and
# cuts compile time. If you need any of these back, add the feature
# name to the list (full list at https://docs.rs/crate/bevy/latest/features).
bevy = { version = "0.16", default-features = false, features = [
    # Asset + log + state plumbing (almost everything depends on these).
    "bevy_asset",
    "bevy_log",
    "bevy_state",
    "bevy_color",
    # 2D rendering pipeline.
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    # Text + UI.
    "bevy_text",
    "default_font",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_picking",
    "bevy_input_focus",
    # Audio (Vorbis-encoded SFX assets — see `sfx.rs`).
    "bevy_audio",
    "vorbis",
    # Image asset format used for the play render target snapshots
    # we generate at startup (`make_hash_image`, `make_scanline_image`).
    "png",
    # Cameras / windowing / input.
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    # Diagnostics resource used by the FPS counter.
    "sysinfo_plugin",
    # Tonemapping LUTs — Bevy's default camera setup references them
    # even when we set ClearColor directly, so keep them around.
    "smaa_luts",
    "tonemapping_luts",
    # Parallel system execution.
    "multi_threaded",
    # Linux X11 backend (Wayland is opt-in).
    "x11",
    # WebGL2 renderer for the wasm build.
    "webgl2",
] }
rand = "0.8"

# Native-only deps. WASM builds get a stub: `winit`'s direct API (resize
# direction, drag-window) is meaningless inside an itch.io HTML embed,
# and `dirs` reads OS config paths that don't exist in a browser. The
# call sites in `modes.rs` + `settings.rs` are cfg-gated to compile to
# no-ops on wasm32.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Bevy 0.16 uses winit 0.30 internally; we depend on the same version directly
# to access ResizeDirection / drag_window for the borderless desktop-mode window.
winit = "0.30"
# Cross-platform config-directory lookup so saved settings land at
# %APPDATA%\ship-game on Windows / ~/.config on Linux / ~/Library/Application
# Support on macOS — no hand-rolled OS branching.
dirs = "5"

# WASM-only deps. `getrandom` is a transitive dep of `rand`; on
# wasm32-unknown-unknown it can't access an OS entropy source by
# default. The `js` / `wasm_js` features route through the browser's
# Web Crypto API, which is what we want for `rand::thread_rng()` to
# work in the browser. Two versions are pinned in Cargo.lock (0.2 and
# 0.3) so we enable the appropriate feature on each.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optional dev-only feature that flips Bevy into dynamic-linking
# mode. Use `cargo run --features dev` for fast iteration — Bevy
# compiles into a `.dll` once and each rebuild only relinks against
# it (typical 30-60s → 3-8s incremental). Release builds
# (`cargo build --release`) ignore this feature, so shipping
# binaries stay self-contained.
[features]
dev = ["bevy/dynamic_linking"]
# AB-test the rectangular (360x200) play area against the default
# square (200x200). Build with `cargo run --features wide_play` to
# render and play on the wider stage; default build stays square.
# Affects PLAY_WORLD_W / PLAY_INTERNAL_W and every spawn-bounds,
# despawn, camera, and HUD layout that reads them.
wide_play = []
# AB-test a playable arena 20% bigger than the camera viewport.
# Entities live inside `ARENA_W × ARENA_H` (= 1.2× viewport) while
# the camera renders the same viewport-sized window; the camera
# follows the player and clamps to the arena edges, mirroring how
# top-down games handle "bigger world than screen". Off → arena
# matches the viewport (no follow needed). On → ~1.44× the play
# space per stage. Try `cargo run --features big_arena`.
big_arena = []
# Demo-release build. Strips developer-facing debug tools out of
# the binary: the bottom-right map debug panel (CLAIM / PHASE /
# SPAWN ALLY / SPAWN BOSS / SPAWN ENEMY / OPEN CUSTOMIZE / ADD
# SCRAP), the `#` keyboard toggle for that panel, and the `+/-`
# stat-debug buttons on the shop's stats panel. Build with
# `cargo build --release --features demo`.
demo = []
